--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="google-site-verification" content="s6jX_UG-l4QN6vi-c471CTiszpUd9nO4P239caDVtfw" />
+  <meta name="description" content="Your go-to place for random Twitch.tv streams">
+  <meta name="keywords" content="Twitch, Go, Random, Stream">
+  <meta name="robots" content="index, follow">
   <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
   <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
   <link rel="stylesheet" href="style.css">
-  <title>GoTwitch - Your go-to place for random Twitch.tv streams</title>
+  <title>GoTwitch - Random Twitch Streams</title>
 </head>
 
 <body>
