--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="google-site-verification" content="s6jX_UG-l4QN6vi-c471CTiszpUd9nO4P239caDVtfw" />
+  <meta name="msvalidate.01" content="D76B29BE4182D9D09F1C0AD40549172F" />
   <meta name="description" content="Your go-to place for random Twitch.tv streams">
   <meta name="keywords" content="Twitch, Go, Random, Stream">
   <meta name="robots" content="index, follow">
