--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
 <body>
   <noscript>
+    <h1>GoTwitch - Random Twitch Streams</h1>
     <strong>We're sorry but GoTwitch doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
